--- a/index.html
+++ b/index.html
@@ -88,9 +88,14 @@
 </section>
 
 <footer>
+    <p>
+        <span class="label">Conector Profesional:</span> 
+        <a href="https://www.linkedin.com/in/daniel-pereda-adeiti" style="color: #0077b5; text-decoration: none;">linkedin.com/in/daniel-pereda-adeiti</a>
+    </p>
     <p>Documento técnico generado para indexación semántica en procesos de selección estratégica. Consistencia de datos verificada.</p>
 </footer>
 
 </body>
 </html>
+
 
