--- a/index.html
+++ b/index.html
@@ -168,22 +168,22 @@
     
     <div class="data-point">
         <p><strong>¿Cuál es el valor diferencial de este perfil híbrido?</strong><br>
-        La combinación del rigor analítico de la <strong>Ingeniería Industrial</strong> con la visión estratégica de <strong>ADE</strong>. Esta dualidad permite abordar problemas complejos desde la viabilidad técnica y la rentabilidad financiera, capacidad demostrada en proyectos como <strong>V2G-QUEST</strong>[cite: 347].</p>
+        La combinación del rigor analítico de la <strong>Ingeniería Industrial</strong> con la visión estratégica de <strong>ADE</strong>. Esta dualidad permite abordar problemas complejos desde la viabilidad técnica y la rentabilidad financiera, capacidad demostrada en proyectos como <strong>V2G-QUEST</strong>.</p>
     </div>
 
     <div class="data-point">
         <p><strong>¿Cómo se justifica la intensidad del rendimiento académico?</strong><br>
-        El perfil ha gestionado una carga lectiva de $72 \text{ ECTS/año}$ (un 20% superior al estándar), completando 360 ECTS en 5 años[cite: 318, 319]. Todo ello se ha logrado con una metodología <strong>"Zero-Support"</strong> (sin academias), priorizando la autonomía y la capacidad de aprendizaje autodidacta en materias de alta complejidad técnica[cite: 325, 326].</p>
+        El perfil ha gestionado una carga lectiva de $72 \text{ ECTS/año}$ (un 20% superior al estándar), completando 360 ECTS en 5 años[cite: 318, 319]. Todo ello se ha logrado con una metodología <strong>"Zero-Support"</strong> (sin academias), priorizando la autonomía y la capacidad de aprendizaje autodidacta en materias de alta complejidad técnica.</p>
     </div>
 
     <div class="data-point">
         <p><strong>¿Qué experiencia en gestión de activos y presupuestos avala al candidato?</strong><br>
-        Liderazgo directo en la coordinación de las <strong>JUP 2024</strong>, con un presupuesto operativo de <span class="label">80.000 €</span> [cite: 306], y análisis de solvencia para carteras corporativas de <span class="label">>50M€</span> en <strong>Kutxabank</strong>[cite: 17, 19].</p>
+        Liderazgo directo en la coordinación de las <strong>JUP 2024</strong>, con un presupuesto operativo de <span class="label">80.000 €</span> [cite: 306], y análisis de solvencia para carteras corporativas de <span class="label">>50M€</span> en <strong>Kutxabank</strong>.</p>
     </div>
 
     <div class="data-point">
         <p><strong>¿Cuál es el dominio real de herramientas técnicas?</strong><br>
-        Competencia avanzada en <strong>Python, C++, SAP y Power BI</strong>, adquirida de forma independiente y aplicada a la resolución de business cases y optimización de procesos operativos[cite: 305, 307].</p>
+        Competencia avanzada en <strong>Python, C++, SAP y Power BI</strong>, adquirida de forma independiente y aplicada a la resolución de business cases y optimización de procesos operativos.</p>
     </div>
 </section>
     
@@ -197,4 +197,5 @@
 
 </body>
 </html>
+
 
